@@ -26,10 +26,13 @@ package org.aoju.bus.notify.provider.aliyun;
 
 import com.alibaba.fastjson.JSON;
 import com.alibaba.fastjson.JSONObject;
+import org.aoju.bus.core.lang.Algorithm;
+import org.aoju.bus.core.lang.Charset;
 import org.aoju.bus.core.lang.Symbol;
 import org.aoju.bus.core.lang.exception.InstrumentException;
-import org.aoju.bus.notify.magic.Response;
-import org.aoju.bus.notify.metric.Properties;
+import org.aoju.bus.notify.Builder;
+import org.aoju.bus.notify.Context;
+import org.aoju.bus.notify.magic.Message;
 import org.aoju.bus.notify.metric.Template;
 import org.aoju.bus.notify.provider.AbstractProvider;
 
@@ -49,17 +52,17 @@ import java.util.TreeMap;
  * 阿里云抽象类提供者
  *
  * @author Justubborn
- * @version 5.8.5
+ * @version 5.8.6
  * @since JDK1.8+
  */
-public class AbstractAliyunProvider<T extends Template, K extends Properties> extends AbstractProvider<T, K> {
+public class AliyunProvider<T extends Template, K extends Context> extends AbstractProvider<T, K> {
 
     /**
      * 发送成功后返回code
      */
     private static final String SUCCESS_RESULT = "OK";
 
-    public AbstractAliyunProvider(K properties) {
+    public AliyunProvider(K properties) {
         super(properties);
     }
 
@@ -71,7 +74,7 @@ public class AbstractAliyunProvider<T extends Template, K extends Properties> ex
      */
     protected String specialUrlEncode(String value) {
         try {
-            return URLEncoder.encode(value, "UTF-8")
+            return URLEncoder.encode(value, Charset.DEFAULT_UTF_8)
                     .replace("+", "%20")
                     .replace("*", "%2A")
                     .replace("%7E", "~");
@@ -116,8 +119,8 @@ public class AbstractAliyunProvider<T extends Template, K extends Properties> ex
      */
     protected String sign(String stringToSign) {
         try {
-            Mac mac = Mac.getInstance("HmacSHA1");
-            mac.init(new SecretKeySpec((properties.getAppSecret() + Symbol.AND).getBytes(StandardCharsets.UTF_8), "HmacSHA1"));
+            Mac mac = Mac.getInstance(Algorithm.HmacSHA1);
+            mac.init(new SecretKeySpec((properties.getAppSecret() + Symbol.AND).getBytes(StandardCharsets.UTF_8), Algorithm.HmacSHA1));
             byte[] signData = mac.doFinal(stringToSign.getBytes(StandardCharsets.UTF_8));
             return Base64.getEncoder().encodeToString(signData);
         } catch (NoSuchAlgorithmException | InvalidKeyException e) {
@@ -125,11 +128,12 @@ public class AbstractAliyunProvider<T extends Template, K extends Properties> ex
         }
     }
 
-    protected Response checkResponse(String response) {
+    protected Message checkResponse(String response) {
         JSONObject object = JSON.parseObject(response);
-        return Response.builder()
-                .result(SUCCESS_RESULT.equals(object.getString("Code")))
-                .desc(object.getString("Code")).build();
+
+        return Message.builder()
+                .errcode(SUCCESS_RESULT.equals(object.getString("Code")) ? Builder.ErrorCode.SUCCESS.getCode() : object.getString("Code"))
+                .errmsg(object.getString("Code")).build();
     }
 
 }
